archive/ntfy.rohrbom.be/netpol-ingress-public.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ntfy-from-public-ingress
  namespace: svc-ntfy
spec:
  podSelector:
    matchLabels:
      app: ntfy
  policyTypes: [Ingress]
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ingress-30
      ports:
        - { protocol: TCP, port: 80 }
